--- a/pom.xml
+++ b/pom.xml
@@ -285,8 +285,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <!-- /Batik transitive dependencies -->
         <!-- Batik dependencies -->
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.3.04</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.axsl.org.w3c.dom.svg</groupId>
             <artifactId>svg-dom-java</artifactId>
