--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
 dependencies {
 
     compile "xml-apis:xml-apis-ext:1.3.04",
-            "org.apache.xmlgraphics:fop:0.94"
+            "org.apache.xmlgraphics:fop:0.94",
+            "xml-apis:xml-apis1.3.04",
 
     compile batikDependencies
 
